[gd_scene load_steps=4 format=3 uid="uid://rabb4ukvpiyj"]

[ext_resource type="Script" path="res://resources/interfaces/gameplay/gameplay_interface.gd" id="1_1pddp"]
[ext_resource type="Theme" uid="uid://cuttwwca07hfh" path="res://theme.tres" id="1_mf5l2"]
[ext_resource type="PackedScene" uid="uid://bg1kiy7ukg6v7" path="res://resources/interfaces/gameplay/package_holder.tscn" id="3_nbox0"]

[node name="GameplayInterface" type="CanvasLayer"]
script = ExtResource("1_1pddp")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_right = 40.0
offset_bottom = 40.0

[node name="ScoreContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="ScoreText" type="Label" parent="Control/VBoxContainer/ScoreContainer"]
layout_mode = 2
theme = ExtResource("1_mf5l2")
text = "Score : "
vertical_alignment = 1

[node name="ScoreValue" type="Label" parent="Control/VBoxContainer/ScoreContainer"]
layout_mode = 2
theme = ExtResource("1_mf5l2")
vertical_alignment = 1

[node name="TimeContainer" type="HBoxContainer" parent="Control/VBoxContainer"]
layout_mode = 2

[node name="TimeText" type="Label" parent="Control/VBoxContainer/TimeContainer"]
layout_mode = 2
theme = ExtResource("1_mf5l2")
text = "Time Left : "

[node name="TimeValue" type="Label" parent="Control/VBoxContainer/TimeContainer"]
layout_mode = 2
theme = ExtResource("1_mf5l2")

[node name="PackageHolder" parent="." instance=ExtResource("3_nbox0")]
anchors_preset = -1
anchor_left = 0.03
anchor_top = 0.75
anchor_right = 0.2
grow_horizontal = 1
grow_vertical = 0
